--- a/locsic/index.html
+++ b/locsic/index.html
@@ -61,7 +61,7 @@
             type="range"
             min="0"
             max="100"
-            value="5"
+            value="10"
             class="volume"
             id="volume" />
           <i class="fas fa-volume-up"></i>
@@ -95,6 +95,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"></script>
+    <script src="test.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
