--- a/locsic/index.html
+++ b/locsic/index.html
@@ -17,7 +17,7 @@
       <h2 class="name">Locsic</h2>
 
       <label for="file"
-        >Select file
+        >Import Music
         <input
           class="file"
           id="file"
@@ -29,6 +29,7 @@
       <!-- <input type="file" id="file" /> -->
     </div>
     <div class="music-container">
+      <div class="bgimage"></div>
       <div class="upper-container">
         <div class="player">
           <div class="image-container">
@@ -109,6 +110,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"></script>
+
     <script src="test.js"></script>
     <script src="script.js"></script>
   </body>
